--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.devofure.ch">
+    package="com.devofure.ch.example">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.devofure.ch.list.ComponentListActivity"
+            android:name=".list.ComponentListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,9 +20,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.devofure.ch.list.ComponentDetailActivity"
+            android:name=".list.ComponentDetailActivity"
             android:label="@string/title_component_detail"
-            android:parentActivityName="com.devofure.ch.list.ComponentListActivity"
+            android:parentActivityName=".list.ComponentListActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
